apps/etherpad/02-etherpad-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: etherpad
  name: etherpad
spec:
  ports:
  - port: 9001
    protocol: TCP
    targetPort: 9001
    nodePort: 32323
  selector:
    app: etherpad
  type: NodePort
