apps/etherpad/03-etherpad-ingress-gen.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: etherpad-ingress
  annotations:
    kubernetes.io/ingress.class: public
    #cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: sturdy-potato-jjxg579jqpw3q6w6-80.app.github.dev
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: etherpad
            port:
              number: 9001
  tls:
  - hosts:
    - sturdy-potato-jjxg579jqpw3q6w6-80.app.github.dev
    #secretName: etherpad-tls
